fix z-index & add shadow on search

--- a/sass/modules/_header.sass
+++ b/sass/modules/_header.sass
@@ -169,6 +169,7 @@
 			position: absolute
 			height: 0
 			overflow: hidden
+			z-index: 2
 		&_active
 			// выпадающее меню
 			.navigation__list
@@ -266,18 +267,20 @@
 			&-wrapper
 				background-color: $white
 				position: absolute
-				display: none
 				top: 80px
 				right: 0px
 				gap: 30px
-				z-index: 999
+				display: none
+				z-index: 10
 
 		&_active
 			.navigation__mobile-wrapper
+				height: auto
 				width: 100%
 				padding: 20px 94px
 				display: flex
 				flex-direction: column
+				z-index: 5
 			.navigation__list
 				justify-content: space-between
 				position: static
@@ -286,6 +289,8 @@
 
 	.search
 		padding: 0
+		box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15)
+		border-radius: 12px
 		.search__button
 			border-radius: 0 12px 12px 0
 		.search__input
